# obs-live-suite

./: .env.example  .env.local.example  .gitignore  .mcp.json  .npmrc  ARCHITECTURE-FINAL.md  ARCHITECTURE-V2.md  CANVAS-PREVIEW-SUMMARY.md  CLAUDE.md  DEBUGGING-SESSION.md  DRY-REFACTORING-PLAN.md  EXAMPLE_PATTERNS.md  MEMORY.md  MIGRATION.md  PLAN.md  README.md  REFACTORING_GUIDELINES.md  SETUP_COMPLETE.md  SOLUTION-SUMMARY.md  START-DEV.md  TASKS.md  THEMING-SUMMARY.md  THEMING-SYSTEM.md  YOUTUBE_INTEGRATION_EXAMPLE.md  YOUTUBE_METADATA_SERVICE.md  build-errors.txt  ecosystem.config.cjs  eslint.config.mjs  instrumentation.ts  jest.config.js  jest.setup.js  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.js  tailwind.config.ts  test-lower.json  (+1 more)
.claude/: settings.local.json
__tests__/: README.md  jest-dom.d.ts
app/: globals.css  layout.tsx  page.tsx
chrome-extension/: README.md  background.js  manifest.json
components/: BodyThemeSync.tsx  theme-provider.tsx
docs/: ARCHITECTURE.md  AUDIT-PROGRESS.md  DATABASE-IMPROVEMENTS-PLAN.md  DONT_DO_LIST.md  FRONTEND_STACK.md  I18N-TRANSLATION-STATUS.md  INTEGRATION_TEST_REPORT_YOUTUBE_DURATION.md  LIVE-ASSIST.md  MEMORY.md  NEXTJS-UPGRADE-AUDIT.md  PERF_CHECKLIST.md  PRD-STREAMERBOT-CHAT.md  QUIZ-COMPLETE-SUMMARY.md  QUIZ-HOST-INTERFACE.md  QUIZ-HOST-LAYOUT.md  QUIZ-HOST-SYNC-IMPROVEMENTS.md  QUIZ-OPTION-C-SUMMARY.md  QUIZ-SYSTEM.md  START-DEV.md  (+13 more)
studio-return/src-tauri/: Cargo.toml  tauri.conf.json
studio-return/src-tauri/src/: lib.rs  main.rs  monitor.rs
(+1103 files in other folders)
