[package]
name = "studio-return"
version = "0.1.0"
edition = "2021"

[lib]
name = "studio_return_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "studio-return"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Gdi", "Win32_Devices_Display", "Win32_Graphics_Gdi"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
